--- a/index.html
+++ b/index.html
@@ -37,14 +37,16 @@
 
   <div id="container">
     <header>
-
     </header>
     
     <div id="main" role="main">
     </div>
     
     <footer>
-
+        <div class="content">
+            <!--<div id="beats-input-display"></div>-->
+            <textarea id="beats-input"></textarea>
+        </div>
     </footer>
   </div> <!--! end of #container -->
 
